# neon-core

./: .gitmodules  README.md
cmake/: GenerateMain.cmake
lib/GL/include/GL/: ati_meminfo.h  ext_texture_compression_s3tc.h  ext_texture_filter_anisotropic.h  glext.h  glx.h  glxext.h  nvx_gpu_memory_info.h  wgl.h  wglext.h
lib/GLES2/include/GLES2/: gl2.h  gl2ext.h
lib/GLES3/include/GLES3/: gl3.h  gl31.h
lib/GLcore/: CMakeLists.txt
lib/lz4/: CMakeLists.txt
lib/lz4/src/: lz4.c
lib/memtrack/: CMakeLists.txt
lib/memtrack/include/: memtrack.h
lib/memtrack/src/: memtrack.c
lib/minilzo/: CMakeLists.txt
lib/xxhash/: CMakeLists.txt
neon/: CMakeLists.txt
neon/include/: neon.h
neon/include/core/: application.h  asset.h  atlas.h  audio.h  common.h  configs.h  filesystem.h  frame.h  glyphs.h  image.h  lang.h  logerr.h  package.h  reader.h  rwtext.h  targa.h  text.h  video.h  wave.h  wavefront.h
neon/include/video/: buffer.h  commandbuffer.h  framebuffer.h  gfx.h  gl.h  info.h  meminfo.h  resources.h  resources_detail.h  sampler.h  shader.h  sprite.h  state.h  stats.h  text.h  texture.h  vertex.h  vertices.h
neon/src/core/: application.c  asset.c  atlas.c  audio.c  configs.c  filesystem.c  frame.c  glyphs.c  image.c  lang.c  log.c  reader.c  rwtext.c  targa.c  text.c  video.c  wave.c  wavefront.c
neon/src/video/: buffer.c  commandbuffer.c  framebuffer.c  info.c  meminfo.c  resources.c  sampler.c  shader.c  sprite.c  state.c  stats.c  text.c  texture.c  vertices.c
packer/: CMakeLists.txt
packer/src/: main.c
test_cube/: CMakeLists.txt
test_cube/src/: cube.c
tools/: main_generator.py
